infra/k8s/nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: nodejs-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
