infra/k8s/nodejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /uploads/$1
spec:
  ingressClassName: nginx
  rules:
    - host: pfc.local
      http:
        paths:
          - path: /node/uploads/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
